tests/NormalTests/paczka2/big_fuzzy/53506105.err
Error in line 16: xGmYlq A36 42,3
Error in line 14: UPs A36 45,0
Error in line 22: 6scxi3kaJ S967 22,9
Error in line 39: UPs S967 54,8
Error in line 41: 6scxi3kaJ S41 30,8
Error in line 54: 6scxi3kaJ S967 49,9
Error in line 52: xGmYlq A36 18,6
Error in line 57: xGmYlq S898 58,7
Error in line 49: vLeiiqO A36 86,4
Error in line 72: xGmYlq S898 62,3
Error in line 87: xGmYlq S967 18,4
Error in line 90: 6scxi3kaJ S41 74,5
Error in line 93: 6scxi3kaJ A36 49,2
Error in line 94: 6scxi3kaJ S898 74,8
Error in line 88: xGmYlq S41 7,7
Error in line 103: 6scxi3kaJ S41 261,8
Error in line 106: S41 A36 70,8
Error in line 102: xGmYlq S967 40,8
Error in line 104: 6scxi3kaJ S898 16,3
Error in line 117: Uf0lFRP8yj S41 134,4
Error in line 119: ybVmOMpUI S967 188,8
Error in line 129: vLeiiqO A36 82,
Error in line 123: ybVmOMpUI S898 77,3
Error in line 107: vLeiiqO S898 168,0
Error in line 156: xGmYlq S898 83,7
Error in line 162: xGmYlq A36 74,7
Error in line 176: ybVmOMpUI S898 253,54
Error in line 159: Uf0lFRP8yj S898 78,4
Error in line 175: ybVmOMpUI S898 68,3
Error in line 183: UPs S898 38,3
Error in line 187: ybVmOMpUI A36 96,1
Error in line 190: ybVmOMpUI S41 85,5
Error in line 186: Uf0lFRP8yj S41 79,2
Error in line 198: Uf0lFRP8yj S898 24,15
Error in line 200: Uf0lFRP8yj S898 90,4
Error in line 201: Uf0lFRP8yj S967 5,6
Error in line 142: 6scxi3kaJ S898 32,1
Error in line 233: S41 A36 41,55
Error in line 244: S41 A36 76,8
Error in line 241: 6scxi3kaJ S967 146,9
